--- a/data-engineer.html
+++ b/data-engineer.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692092444-data-engineer-remote-option-'>Lingoda Data Engineer (Remote option) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/babylonhealth/4357f052-c2f4-4e29-a13c-e91aa74fdc60'>Babylon Health - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light">UK - London</span></p>
 <p>Posted on: 2019-07-27</p>
@@ -56,9 +60,21 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://profacebook.applytojob.com/apply/Hm84NOXEWB/Data-Engineer-9359888'>Data Engineer (9359888) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/Hm84NOXEWB/Data-Engineer-9359888'>Data Engineer (9359888) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://cloudacademy.workable.com/jobs/1085422'>Cloud Academy - Jobs: Data Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>3 days ago ... Apply online for the job of Data Engineer at Cloud Academy.</p>
+<hr/>
+<h5><a href='https://photoboxgroup.workable.com/jobs/1087076'>ETL Data Engineer - Apply online - Photobox Group - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>1 day ago ... Apply online for the job of ETL Data Engineer at Photobox Group.</p>
+<hr/>
+<h5><a href='https://platform-science.workable.com/jobs/1083475'>Senior Vehicle Data Engineer - Apply online - Platform Science - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>2 days ago ... Apply online for the job of Senior Vehicle Data Engineer at Platform Science.</p>
 <hr/>
 <h5><a href='https://schibsted-classified-hungary-kft.workable.com/j/76C40756B3'>Adevinta Classified Media Hungary Kft - Jobs: Szoftverfejleszt? / Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Budapest, Hungary</span></p>
@@ -103,7 +119,7 @@ Connecticut. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vimpelcom/4770762b-fd25-4080-9830-d71f9e627605'>VEON - Big Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vimpelcom/4770762b-fd25-4080-9830-d71f9e627605'>VEON - Big Data Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -187,7 +203,7 @@ online content network for information and online operations of CBS Corporation
 <p>6 days ago ... This position is in Solvay Research & Innovation Centre Brussels, in the recently 
 created Data Management Excellence Team. Within this multidisciplinary team?...</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/5ip3ywgqb7zop5nibubdnxrp1h'>Senior Data Engineer | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/5ip3ywgqb7zop5nibubdnxrp1h'>Senior Data Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -314,7 +330,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999692168574-azure-data-engineer'>Greppy Systems Azure Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999692168574-azure-data-engineer'>Greppy Systems Azure Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -356,7 +372,7 @@ Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p
 machine learning and be part of transforming the way that we understand and 
 talk to?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -410,7 +426,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034780-data-engineer'>Adam Kay Group Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999692034780-data-engineer'>Adam Kay Group Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Michigan, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -434,7 +450,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071811-data-engineer'>Bey Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071811-data-engineer'>Bey Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -446,13 +462,13 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/15143'>Data Engineer - CBS Interactive Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Data-Engineer/15143'>Data Engineer - CBS Interactive Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Truly premium content. At true scale. Only CBSi. CBS Interactive is the premier 
 online content network for information and online operations of CBS Corporation
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999692036613-senior-data-engineer'>Goldstone Partners, Inc. Senior Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999692036613-senior-data-engineer'>Goldstone Partners, Inc. Senior Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -460,23 +476,6 @@ online content network for information and online operations of CBS Corporation
       Data Engineer (m/f/div) - Elinvar GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/Bangalore/Big-Data--Data-Engineer_77457'>Senior Big Data Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 7, 2019 ... Strong 8+ years of industry experience. 2. 4-8 years of strong experience in 
-working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/vividseats/job/o9gBafwU'> Vivid Seats Careers - Data Engineering Manager</a></h5> 
-<p><span class="badge badge-light">Chicago</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1786662'>Job Application for Data Engineering Manager at Omada Health</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999691978050-data-engineer'>Bey Data Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
 
