--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999692394978-senior-security-analyst-engineer'>Spry Squared, Inc. Senior Security Analyst/Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=oYThafw2&__jvst=Employee+Referral&__jvsd=sYnWNfwO&__jvsc=Twitter&bid=nlc3VLwL'>Align Technology Careers - Senior Security Tools Engineer</a></h5> 
 <p><span class="badge badge-light">Moscow</span></p>
 <p>Posted on:: 2019-07-27</p>
@@ -83,7 +87,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/schneider-electric/job/oKfQ9fwI'>Schneider Electric NAM Careers - Senior Endpoint Security Support Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/schneider-electric/job/oKfQ9fwI'>Schneider Electric NAM Careers - Senior Endpoint Security Support Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -101,7 +105,7 @@
 performance of research-related tasks, including data collection, manipulation 
 and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -179,11 +183,11 @@ to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='https://freelancer.workable.com/j/271EBBF32F'>Freelancer.com - Jobs: Security Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://freelancer.workable.com/j/271EBBF32F'>Freelancer.com - Jobs: Security Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zycus-1.workable.com/j/0AB165E01E'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
+<h5><a href='https://zycus-1.workable.com/j/0AB165E01E'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
 <p><span class="badge badge-light">Maharashtra, India</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -401,7 +405,7 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/5d3jds6rn5a3dp6y17g365zs4h'>State of WI - DHS - Security Patch/Software Engineer 2 (16117) | Sundial Software Career Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/sundial/job/5d3jds6rn5a3dp6y17g365zs4h'>State of WI - DHS - Security Patch/Software Engineer 2 (16117) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -415,7 +419,7 @@ today!</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/chmnnst95e4a6iyj5wjhtedn3o'>Application Security Engineer | JFR Staffing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/chmnnst95e4a6iyj5wjhtedn3o'>Application Security Engineer | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -455,11 +459,6 @@ today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Cybersecurity Analyst. Key Role: Provide detection, identification, and reporting 
 of possible Cyber-attacks and intrusions, anomalous activities, and misuse?...</p>
-<hr/>
-<h5><a href='https://oath.wd5.myworkdayjobs.com/careers/job/US---Sunnyvale/Paranoids-Senior-Enterprise-Security-Engineer_JR0010822'>Paranoids Senior Enterprise Security Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>3 days ago ... Paranoids Senior Insider Threat Analyst | US - Sunnyvale, More... Paranoids 
-Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...</p>
 <hr/>
 
 
